# opencv_sigill_bug

./: CMakeLists.txt  main.cpp
